--- a/tax-dao/pom.xml
+++ b/tax-dao/pom.xml
@@ -6,4 +6,20 @@
     <version>1.0.0-SNAPSHOT</version>
   </parent>
   <artifactId>tax-dao</artifactId>
+  
+  <!-- 依赖注入 -->
+  <dependencies>
+  	<dependency>
+  		<groupId>com.zxy</groupId>
+    	<artifactId>tax-common</artifactId>
+    	<version>1.0.0-SNAPSHOT</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>com.zxy</groupId>
+    	<artifactId>tax-entity</artifactId>
+    	<version>1.0.0-SNAPSHOT</version>
+  	</dependency>
+  </dependencies>
+  
+  
 </project>
