加上了tomcat运行插件

--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,18 @@
 					<encoding>utf-8</encoding>
 				</configuration>
   			</plugin>
+		  	<!-- 配置tomcat7容器插件 -->
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+				<!-- 插件的配置信息 -->
+				<configuration>
+					<!-- 端口号 -->
+					<port>8000</port>
+					<path>/</path>
+				</configuration>
+			</plugin>
   		</plugins>
   </build>
   
