测试了struts2+spring整合,没发现问题. (1)切记配置文件放在web项目下.其他项目会打成jar包,读取配置文件会失败. (2)struts.xml使用include其他struts配置文件时,不能用classpath,只能写相对路径.

--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 		<artifactId>junit</artifactId>
 		<version>${junit.version}</version>
 		<!--保留到测试 -->
-		<scope>test</scope>
+		<!-- <scope>test</scope> -->
 	</dependency>
 
 	<!-- jsp-api、servlet-api、el-api -->
@@ -135,7 +135,7 @@
 				<!-- 插件的配置信息 -->
 				<configuration>
 					<!-- 端口号 -->
-					<port>8000</port>
+					<port>8888</port>
 					<path>/</path>
 				</configuration>
 			</plugin>
