--- a/tax-web/src/main/webapp/WEB-INF/web.xml
+++ b/tax-web/src/main/webapp/WEB-INF/web.xml
@@ -16,7 +16,7 @@
   
   <filter-mapping>
   	<filter-name>struts2-filter</filter-name>
-  	<url-pattern>.action</url-pattern>
+  	<url-pattern>*.action</url-pattern>
   </filter-mapping>
   
   
