添加了日志

--- a/pom.xml
+++ b/pom.xml
@@ -74,11 +74,6 @@
 		<artifactId>hibernate-core</artifactId>
 		<version>${hibernate.version}</version>
 	</dependency>
-	<!-- <dependency>
-		<groupId>org.hibernate</groupId>
-		<artifactId>hibernate-c3p0</artifactId>
-		<version>${hibernate.version}</version>
-	</dependency> -->
 	
 	<!-- https://mvnrepository.com/artifact/com.mchange/c3p0 -->
 	<dependency>
@@ -116,7 +111,14 @@
 		<version>${mysql.version}</version>
 	</dependency>
 	
+	<dependency>
+	    <groupId>log4j</groupId>
+	    <artifactId>log4j</artifactId>
+	    <version>1.2.17</version>
+	</dependency>
+    
   </dependencies>
+  
   
   
   
