--- a/pom.xml
+++ b/pom.xml
@@ -111,12 +111,32 @@
 		<version>${mysql.version}</version>
 	</dependency>
 	
-	<dependency>
+	<!-- lo4j日志 -->
+	<!-- <dependency>
 	    <groupId>log4j</groupId>
 	    <artifactId>log4j</artifactId>
 	    <version>1.2.17</version>
+	</dependency> -->
+	
+	<!-- 如果采用log4j2的话，需要下面3个依赖 -->
+    <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+	<dependency>
+	    <groupId>org.apache.logging.log4j</groupId>
+	    <artifactId>log4j-core</artifactId>
+	    <version>2.8.2</version>
 	</dependency>
-    
+	<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-web -->
+	<dependency>
+	    <groupId>org.apache.logging.log4j</groupId>
+	    <artifactId>log4j-web</artifactId>
+	    <version>2.8.2</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-jcl -->
+	<dependency>
+	    <groupId>org.apache.logging.log4j</groupId>
+	    <artifactId>log4j-jcl</artifactId>
+	    <version>2.8.2</version>
+	</dependency>
   </dependencies>
   
   
