--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		<struts2.version>2.3.31</struts2.version>
 		<mysql.version>5.1.29</mysql.version>
 		<c3p0.version>0.9.5.2</c3p0.version>
+		<poi.version>3.15</poi.version>
 	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	    <!-- 防止控制输出台中文乱码 -->
 		<argLine>-Dfile.encoding=UTF-8</argLine> 
@@ -137,8 +138,23 @@
 	    <artifactId>log4j-jcl</artifactId>
 	    <version>2.8.2</version>
 	</dependency>
+	
+	<!-- poi的jar包  -->
+	<dependency>
+		<groupId>org.apache.poi</groupId>
+		<artifactId>poi</artifactId>
+		<version>${poi.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.poi</groupId>
+		<artifactId>poi-ooxml</artifactId>
+		<version>${poi.version}</version>
+	</dependency>
+	
+	
   </dependencies>
   
+	
   
   
   
