--- a/tax-web/src/main/webapp/WEB-INF/web.xml
+++ b/tax-web/src/main/webapp/WEB-INF/web.xml
@@ -36,7 +36,7 @@
   	<!-- 属性组 -->
   	<jsp-property-group>
   		<url-pattern>*.jsp</url-pattern>
-  		全局引入头文件
+  		<!-- 全局引入头文件 -->
   		<include-prelude>/WEB-INF/jsp/base.jsp</include-prelude>
   	</jsp-property-group>
   </jsp-config>
